# PhotoMerge

./: .coverage  .gitignore  README.md  pyproject.toml
app/: copy_files.py  get_files.py  hash_files.py  logger.py  main.py
app/config/: config.toml
src/photomerge/: __init__.py  copy_files.py  get_files.py  hash_files.py  logger.py
src/photomerge/config/: config.toml
tests/: test_copy_files.py  test_get_files.py  test_hash_files.py  test_init_argparse.py  test_init_config.py  test_init_initialize_hashes.py  test_init_initialize_paths.py  test_init_main.py  test_init_process_files.py  test_logger.py  test_main_argparse.py  test_main_config.py  test_main_initialize_hashes.py  test_main_initialize_paths.py  test_main_main.py  test_main_process_files.py
